Fixed Header + footer overflow with min-height

--- a/css/style.css
+++ b/css/style.css
@@ -50,9 +50,9 @@ button {
 /* Intestazione */
 
 header {
-    height: 500px;
+    min-height: 500px;
     color: #ffffff;
-    padding: 30px;
+    /* padding: 30px; */
 
 }
 
@@ -142,7 +142,7 @@ header {
 /* Footer */
 
 footer {
-    height: 600px;
+    min-height: 600px;
     background-color: #23272a;
     color: #ffffff;
 }
